deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapptest
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: myapptest
  template:
    metadata:
      annotations:
        kubernetes.io/change-cause: "CI_COMMIT_SHORT_SHA"
      labels:
        app: myapptest
    spec:
      containers:
        - name: myapptest
          image: jcontti/challenge-repo:5
          imagePullPolicy: Always
          resources:
            requests:
              memory: "100Mi"
              cpu: "128m"
            limits:
              memory: "500Mi"
              cpu: "500m"
          ports:
          - name: pback-8080
            containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: myapptest
spec:
  selector:
    app: myapptest
  ports:
    - name: pback-8080
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort 
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: myapptest
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    app: myapptest
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: myapptest
              servicePort: 8080
